--- a/Jungle-Academy/portfolio2/css/sign-in.css
+++ b/Jungle-Academy/portfolio2/css/sign-in.css
@@ -1,12 +1,12 @@
 h1, h2, h3, h4, div, ul, ol, li, dl, dt, dd, p, address, header, nav, main,
-section, article, footer, aside, figure, a {
+section, article, footer, aside, figure, a, form, fieldset, legend, button {
   margin: 0;
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
 
-header, body, nav, main, section, article, footer, aside, figure {
+header, body, nav, main, section, article, footer, aside, figure, input {
   display: block;
   margin: 0;
   padding: 0;
@@ -36,7 +36,6 @@ body {
 header.main-header {
   position: absolute;
   top: 0;
-  left: 0;
   width: 100%;
   height: 120px;
   background: #fff;
@@ -118,7 +117,8 @@ div.container > nav.gnb > ul.gnb-menu > li.menu-item {
 div.container > nav.gnb > ul.gnb-menu > li.menu-item > a {
   display: block;
   color: #110c0c;
-  font-size: 14px;
+  font-size: 18px;
+  font-weight: bold;
   text-transform: capitalize;
   padding: 20px 40px;
 }
@@ -138,7 +138,7 @@ div.container > nav.gnb > ul.gnb-menu > li.menu-item > ul.sub-menu > li {
 
 div.container > nav.gnb > ul.gnb-menu > li.menu-item > ul.sub-menu > li > a {
   color: #898989;
-  font-size: 12px;
+  font-size: 16px;
   text-transform: capitalize;
   line-height: 45px;
 }
@@ -197,13 +197,313 @@ div.container nav.tnb a {
   }
 }
 
+header.main-header[open] {
+  background-color: #F5F6F8;
+  height: 480px;
+}
+
+header.main-header[open] div.container h1.logo {
+  padding-left: 30px;
+}
+
+header.main-header[open] div.container h1.logo a {
+  -webkit-transform: scale(1.5) translateY(-50%);
+          transform: scale(1.5) translateY(-50%);
+  color: #949592;
+}
+
+header.main-header[open] div.container h1.logo a span {
+  color: #949592;
+}
+
+@media all and (max-width: 768px) {
+  header.main-header[open] div.container h1.logo {
+    height: 50px;
+    position: relative;
+  }
+  header.main-header[open] div.container h1.logo a {
+    padding-top: 30px;
+    font-size: 14px;
+  }
+  header.main-header[open] div.container h1.logo a span {
+    font-size: 13px;
+    padding-left: 10px;
+  }
+}
+
+@media all and (max-width: 768px) {
+  header.main-header[open] {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 85%;
+    height: 100%;
+  }
+  header.main-header[open] div.container {
+    height: 100%;
+  }
+}
+
+header.main-header[open] .menu-opener {
+  top: 65px;
+}
+
+header.main-header[open] .menu-opener .menu-stick {
+  background-color: #646464;
+}
+
+header.main-header[open] .menu-opener .menu-stick:nth-child(1) {
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+  -webkit-transform-origin: 2px;
+          transform-origin: 2px;
+}
+
+header.main-header[open] .menu-opener .menu-stick:nth-child(2) {
+  opacity: 0;
+}
+
+header.main-header[open] .menu-opener .menu-stick:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+  -webkit-transform-origin: 2px;
+          transform-origin: 2px;
+}
+
+@media all and (max-width: 768px) {
+  header.main-header[open] .menu-opener {
+    top: 16.5px;
+  }
+}
+
+header.main-header[open] nav.tnb a {
+  color: #949592;
+}
+
+header.main-header[open] nav.gnb ul.gnb-menu li.menu-item a {
+  color: #110c0c;
+  font-weight: bold;
+}
+
+header.main-header[open] nav.gnb ul.gnb-menu li.menu-item ul.sub-menu {
+  background-color: transparent;
+  padding: 15px 30px;
+  height: auto;
+  margin-left: 30px;
+  white-space: nowrap;
+}
+
+header.main-header[open] nav.gnb ul.gnb-menu li.menu-item ul.sub-menu li {
+  display: block;
+  height: 45px;
+  -webkit-transition: height .4s;
+  transition: height .4s;
+}
+
+header.main-header[open] nav.gnb ul.gnb-menu li.menu-item ul.sub-menu li a {
+  color: #646464;
+}
+
+@media all and (max-width: 768px) {
+  header.main-header[open] nav.gnb {
+    width: 200px;
+    left: 0;
+    height: 100%;
+    margin-left: 20px;
+    z-index: 999;
+    opacity: 1;
+  }
+  header.main-header[open] nav.gnb > ul.gnb-menu {
+    margin-top: 20px;
+    height: 100%;
+    display: block;
+  }
+  header.main-header[open] nav.gnb > ul.gnb-menu > li.menu-item {
+    width: 100%;
+    text-align: left;
+    float: none;
+    -webkit-transition: all .2s;
+    transition: all .2s;
+  }
+  header.main-header[open] nav.gnb > ul.gnb-menu > li.menu-item.sub-menu-open > ul.sub-menu {
+    opacity: 1;
+    height: auto;
+    padding: 0;
+  }
+  header.main-header[open] nav.gnb > ul.gnb-menu > li.menu-item.sub-menu-open > ul.sub-menu > li {
+    height: 45px;
+  }
+  header.main-header[open] nav.gnb > ul.gnb-menu > li.menu-item.sub-menu-open > ul.sub-menu > li a {
+    opacity: 1;
+  }
+  header.main-header[open] nav.gnb > ul.gnb-menu > li.menu-item > a {
+    font-weight: normal;
+    font-size: 20px;
+    letter-spacing: 3px;
+    padding: 15px 15px 10px 15px;
+  }
+  header.main-header[open] nav.gnb > ul.gnb-menu > li.menu-item > ul.sub-menu {
+    height: 0px;
+    opacity: 0;
+    padding: 0px;
+  }
+  header.main-header[open] nav.gnb > ul.gnb-menu > li.menu-item > ul.sub-menu > li {
+    height: 40px;
+  }
+  header.main-header[open] nav.gnb > ul.gnb-menu > li.menu-item > ul.sub-menu > li > a {
+    font-size: 16px;
+    font-weight: normal;
+    line-height: 40px;
+    letter-spacing: 1.5px;
+    opacity: 0;
+  }
+}
+
+section {
+  margin-top: 220px;
+}
+
+section .sign-wrap {
+  width: 460px;
+  margin: 100px auto;
+}
+
+section .sign-wrap .sign-in {
+  border: none;
+}
+
+section .sign-wrap .sign-in legend {
+  text-align: center;
+  font-size: 40px;
+  font-weight: bold;
+}
+
+section .sign-wrap .sign-in input {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  outline: none;
+  font-size: 15px;
+  width: 100%;
+  height: 50px;
+  margin-top: 30px;
+  padding-left: 20px;
+  border: 1px solid #DCDCDC;
+  color: #DCDCDC;
+}
+
+section .sign-wrap .sign-in input:nth-child(3) {
+  margin-top: 20px;
+}
+
+section .sign-wrap .sign-in button {
+  color: #fff;
+  background: #744C95;
+  display: block;
+  width: 100%;
+  height: 50px;
+  margin-top: 30px;
+  font-size: 15px;
+  border: none;
+}
+
+section .sign-wrap .sign-in p, section .sign-wrap .sign-in a {
+  text-align: center;
+}
+
+section .sign-wrap .sign-in p {
+  font-size: 15px;
+  margin-top: 30px;
+  color: #666666;
+}
+
+section .sign-wrap .sign-in a {
+  display: block;
+  width: 100px;
+  font-size: 15px;
+  margin: 10px auto 30px;
+  border: 1px solid #C9C9C9;
+  border-radius: 30px;
+  padding: 8px 20px;
+}
+
+section .sign-wrap .sign-up {
+  border: none;
+  border-top: 1px solid #DCDCDC;
+  padding-top: 30px;
+}
+
+section .sign-wrap .sign-up strong, section .sign-wrap .sign-up p, section .sign-wrap .sign-up a {
+  text-align: center;
+}
+
+section .sign-wrap .sign-up strong {
+  display: block;
+  font-size: 17px;
+}
+
+section .sign-wrap .sign-up p {
+  color: #555555;
+  margin-top: 15px;
+}
+
+section .sign-wrap .sign-up p em {
+  font-style: normal;
+  color: #76A029;
+}
+
+section .sign-wrap .sign-up a {
+  margin: 30px 0px;
+  display: block;
+  height: 50px;
+  line-height: 50px;
+  color: #fff;
+  background: #8AB933;
+}
+
+@media all and (max-width: 768px) {
+  section {
+    margin: 100px 20px 50px;
+  }
+  section .sign-wrap {
+    margin: 0px;
+    width: 100%;
+  }
+  section .sign-wrap .sign-in legend {
+    font-size: 26px;
+  }
+  section .sign-wrap .sign-in input {
+    margin-top: 15px;
+    height: 40px;
+    font-size: 14px;
+  }
+  section .sign-wrap .sign-in input:nth-child(3) {
+    margin-top: 10px;
+  }
+  section .sign-wrap .sign-in button {
+    margin-top: 20px;
+    height: 40px;
+  }
+  section .sign-wrap .sign-in p {
+    font-size: 14px;
+  }
+  section .sign-wrap .sign-in a {
+    font-size: 14px;
+    padding: 5px 20px;
+  }
+  section .sign-wrap .sign-up p {
+    font-size: 14px;
+    margin-top: 10px;
+  }
+  section .sign-wrap .sign-up a {
+    height: 40px;
+    line-height: 40px;
+  }
+}
+
 footer {
   background-color: #5a5a5a;
   text-align: center;
   overflow: hidden;
-  position: fixed;
-  width: 100%;
-  bottom: 0;
 }
 
 footer div.btn-set {
