--- a/Jungle-Academy/portfolio2/css/sign-in.scss
+++ b/Jungle-Academy/portfolio2/css/sign-in.scss
@@ -6,10 +6,10 @@
 
 // reset
 h1,h2,h3,h4,div,ul,ol,li,dl,dt,dd,p,address,header,nav,main,
-section,article,footer,aside,figure,a {
+section,article,footer,aside,figure,a,form,fieldset,legend,button {
   margin: 0; padding: 0; box-sizing: border-box;}
 
-header, body, nav, main, section, article, footer, aside, figure {
+header, body, nav, main, section, article, footer, aside, figure, input {
   display: block; margin:0; padding: 0;
 }
 
@@ -22,7 +22,6 @@ body {font: 15px/1.6 'Noto Sans KR';}
 header.main-header {
   position: absolute;
   top: 0;
-  left: 0;
   width: 100%;
   height: 120px;
   background: #fff;
@@ -57,7 +56,11 @@ header.main-header {
           transition: all .4s;
         }
       }
-      @include media-mobile(){
+    }
+
+    @include media-mobile(){
+
+      h1.logo{
         a{
           font-size: 14px;
 
@@ -97,7 +100,8 @@ div.container {
         >a{
           display: block;
           color: #110c0c;
-          font-size: 14px;
+          font-size: 18px;
+          font-weight: bold;
           text-transform: capitalize;
           padding: 20px 40px;
         }
@@ -115,7 +119,7 @@ div.container {
 
             >a{
               color: #898989;
-              font-size: 12px;
+              font-size: 16px;
               text-transform: capitalize;
               line-height: 45px;
             }
@@ -178,7 +182,347 @@ div.container {
       display: none;    }
   }
 }
+//header end
 
+//헤더가 오픈일때
+header.main-header {
+  &[open] {
+    background-color: #F5F6F8;
+    height: 480px;
+
+    div.container{
+
+      h1.logo {
+        //패딩효과가 부자연스러움
+        padding-left: 30px;
+
+        a {
+          transform: scale(1.5) translateY(-50%);
+          color: #949592;
+
+          span {
+            //색이 늦게 바뀜
+            color: #949592;
+          }
+        }
+
+        //h1
+        @include media-mobile(){
+          height: 50px;
+          position: relative;
+
+
+          a{
+            padding-top: 30px;
+            font-size: 14px;
+
+            span {
+              font-size: 13px;
+              padding-left: 10px;
+            }
+          }
+        }
+      }
+    }
+
+    //header.main-header
+    @include media-mobile(){
+      position: fixed;
+      top: 0;
+      right: 0;
+      width: 85%;
+      height: 100%;
+
+      div.container {
+        height: 100%;
+      }
+    }
+
+    .menu-opener {
+      top: 65px;
+
+      .menu-stick {
+        background-color: #646464;
+      }
+        //click할때 transition 적용
+      .menu-stick:nth-child(1) {
+        transform: rotate(45deg);
+        transform-origin: 2px;
+      }
+
+      .menu-stick:nth-child(2) {
+        opacity: 0; 
+      }
+
+      .menu-stick:nth-child(3) {
+        transform: rotate(-45deg);
+        transform-origin: 2px;
+      }
+
+      @include media-mobile(){
+        top: 16.5px;
+      }
+    }
+
+    nav.tnb {
+      a {
+        color: #949592;
+      }
+    }
+
+    nav.gnb {
+
+      ul.gnb-menu {
+        li.menu-item {
+          
+          a{
+            color: #110c0c;
+            font-weight: bold;
+          }
+
+          ul.sub-menu {
+            background-color: transparent;
+            padding: 15px 30px;
+            height: auto;
+            margin-left: 30px;
+            white-space: nowrap;
+            
+            li {
+              display: block;
+              height: 45px;
+              transition: height .4s;
+
+              a{
+                color: #646464;
+              }
+            }
+          }
+        }
+      }
+
+      //nav.gnb
+      @include media-mobile(){
+        width: 200px;
+        left: 0;
+        height: 100%;
+        margin-left: 20px;
+        z-index: 999;
+        opacity: 1;
+    
+        >ul.gnb-menu{
+          margin-top: 20px;
+          height: 100%;
+          display: block;
+    
+          >li.menu-item{
+            width: 100%;
+            text-align: left;
+            float: none;
+            transition: all .2s;
+    
+            &.sub-menu-open {
+              > ul.sub-menu {
+                opacity: 1;
+                height: auto;
+                padding: 0;
+                
+                >li {
+                  height: 45px;
+
+                  a{
+                    opacity: 1;
+                  }
+                }
+              }
+            }
+    
+            >a {
+              font-weight: normal;
+              font-size: 20px;
+              letter-spacing: 3px;
+              padding: 15px 15px 10px 15px;
+            }
+            
+            >ul.sub-menu{
+              height: 0px;
+              opacity: 0;
+              padding: 0px;
+    
+              >li{
+                height: 40px;
+
+    
+                >a{
+                  font-size: 16px;
+                  font-weight: normal;
+                  line-height: 40px;
+                  letter-spacing: 1.5px;   
+                  opacity: 0;             
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+
+
+section{
+  margin-top: 220px;
+
+  .sign-wrap{
+    width: 460px;
+    margin: 100px auto;
+
+    .sign-in {
+      border: none;
+
+      legend {
+        text-align: center;
+        font-size: 40px;
+        font-weight: bold;
+      }
+      input {
+        box-sizing: border-box;
+        outline: none;
+        font-size: 15px;
+        width: 100%;
+        height: 50px;
+        margin-top: 30px;
+        padding-left: 20px;
+        border: 1px solid #DCDCDC;
+        color: #DCDCDC;
+
+        //여기에 쓰는건 맞는데 왜 세번째 자식이 2번째 input으로 인식하는지 모르겠음
+        &:nth-child(3){
+          margin-top: 20px;
+        }
+      }
+  
+      button {
+        color: #fff;
+        background: #744C95;
+        display: block;
+        width: 100%;
+        height: 50px;
+        margin-top: 30px;
+        font-size: 15px;
+        border: none;
+      }
+
+      p, a {
+        text-align: center;
+      }
+      
+      p {
+        font-size: 15px;
+        margin-top: 30px;
+        color: #666666;
+      }
+
+      a {
+        display: block;
+        width: 100px;
+        font-size: 15px;
+        margin: 10px auto 30px;
+        border: 1px solid #C9C9C9;
+        border-radius: 30px;
+        padding: 8px 20px;
+      }
+    }
+
+    .sign-up {
+      border: none;
+      border-top: 1px solid #DCDCDC;
+      padding-top: 30px;
+
+      strong, p, a {
+        text-align: center;
+      }
+
+      strong {
+        display: block;
+        font-size: 17px;
+      }
+
+      p {
+        color: #555555;
+        margin-top: 15px;
+
+        em{
+          font-style: normal;
+          color: #76A029;
+        }
+      }
+
+      a {
+        margin: 30px 0px;
+        display: block;
+        height: 50px;
+        line-height: 50px;
+        color: #fff;
+        background:#8AB933;
+
+      }
+    }
+  }
+
+  //section
+  @include media-mobile(){
+    margin: 100px 20px 50px;
+
+    .sign-wrap {
+      margin: 0px;
+      width: 100%;
+
+      .sign-in {
+        legend {
+          font-size: 26px;
+        }
+        input {
+          margin-top: 15px;
+          height: 40px;
+          font-size: 14px;
+
+          &:nth-child(3) {
+            margin-top: 10px;
+          }
+
+        }
+        button {
+          margin-top: 20px;
+          height: 40px;
+        }
+        p {
+          font-size: 14px;
+        }
+        a {
+          font-size: 14px;
+          padding: 5px 20px;
+        }
+      }
+
+      .sign-up {
+        strong {
+
+        }
+        p {
+          font-size: 14px;
+          margin-top: 10px;
+
+        }
+        a{
+          height: 40px;
+          line-height: 40px;
+
+        }
+      }
+    }
+  }
+}
 
 
 
@@ -189,12 +533,6 @@ footer {
   background-color: #5a5a5a;
   text-align: center;
   overflow: hidden;
-
-  //추가
-  position: fixed;
-  width: 100%;
-  bottom: 0;
-
 
   div.btn-set{
     margin: 40px auto 0;
