--- a/Jungle-Academy/portfolio2/css/sign-in.scss
+++ b/Jungle-Academy/portfolio2/css/sign-in.scss
@@ -20,13 +20,14 @@ img {vertical-align: middle;} //인라인요소에 middle 기본 리셋
 body {font: 15px/1.6 'Noto Sans KR';}
 
 header.main-header {
-  position: absolute;
+  position: fixed;
   top: 0;
   width: 100%;
   height: 120px;
   background: #fff;
   transition: all .4s;
   border-bottom: 1px solid #dbdbdb;
+  z-index: 999;
 
   div.container {
     position: relative;
@@ -86,7 +87,6 @@ div.container {
     right: 80px;
     width: 690px;
     overflow: hidden;
-    z-index: 999;
 
     >ul.gnb-menu{
       overflow: hidden;
