--- a/Jungle-Academy/portfolio2/css/ware-valley.scss
+++ b/Jungle-Academy/portfolio2/css/ware-valley.scss
@@ -22,13 +22,43 @@ a img {border: 0;}
 img {vertical-align: middle;} //인라인요소에 middle 기본 리셋
 body {font: 15px/1.6 'Noto Sans KR';}
 
+.hero-wrap {
+  position: relative;
+  aside{
+    position: absolute;
+    bottom: 40px;
+    left: 50%;
+    transform: translateX(-50%);
+    
+    a{
+      display: inline-block;
+      width: 12px;
+      height: 12px;
+      border-radius: 50%;
+      border: 1px solid #fff;
+
+      + a {
+        margin-left: 20px;
+      }
+
+      &.active {
+        background: #fff;
+      }
+    }
+  }
+}
+
 //top-hero 공통
 div.top-hero {
   display: none;
-  background: url(../img/main_img2.png) no-repeat center top ;
+  background: url(../img/main_img2.png) no-repeat center top / cover ;
   width: 100%;
   height: 840px;
   transition: all .4s;
+
+  &.active {
+    display: block;
+  }
 
   h1 {
     position: absolute;
@@ -99,10 +129,9 @@ div.top-hero {
   }
 }
 
+
 //hero1,2,3 각각의 style
 .top-hero.hero1{
-  // display: block;
-
   h1 {
     top: calc(50% + 120px);
 
@@ -113,7 +142,6 @@ div.top-hero {
 }
 
 .top-hero.hero2{
-  // display: block;
   background-image: url(../img/download/common/slide_visual02.jpg);
 
   @include media-mobile(){
@@ -127,7 +155,6 @@ div.top-hero {
 }
 
 .top-hero.hero3{
-  display: block;
   background-image: url(../img/download/common/slide_visual03.jpg);
 
   h1, .hero-btn {
@@ -254,7 +281,7 @@ header.main-header {
       .menu-stick {
         background-color: #646464;
       }
-        //click할때 transition 적용
+      
       .menu-stick:nth-child(1) {
         transform: rotate(45deg);
         transform-origin: 2px;
@@ -305,7 +332,6 @@ header.main-header {
             text-align: center;
           }
 
-          //2번째 자식 cursor가 안바뀜 
           &:nth-child(2) {
             border-right: 1px solid #DCDCDC;
           }
@@ -347,7 +373,7 @@ header.main-header {
       @include media-mobile(){
         width: 200px;
         left: 0;
-        height: 100%;
+        height: auto;
         margin-left: 20px;
         opacity: 1;
     
@@ -427,6 +453,7 @@ div.container {
 
       span {
         display: block;
+        color: #fff;
         padding-left: 30px;
         font-size: 30px;
         transition: all .4s;
@@ -707,6 +734,7 @@ section.board-list {
       justify-content: space-between;
       margin-bottom: 50px;
 
+
       li {
         overflow: hidden;
         position: relative;
@@ -714,13 +742,10 @@ section.board-list {
         background-color: #9f9f9f;
         padding: 30px 40px;
 
-
         a{
-          float: left;
           display: inline-block;
-          width: 60%;
           height: 100%;
-
+          
           h3 {
             color: #fff;
             font-size: 18px;
@@ -738,13 +763,17 @@ section.board-list {
             height: 100%;
           }
         }
-        
+
         img {
           display: block;
           width: 100px;
           position: absolute;
+          top:30px;
           right: 40px;
-          vertical-align: top;
+          
+          + a {
+            max-width: calc(100% - 110px);
+          }
         }
       }
 
@@ -762,7 +791,8 @@ section.board-list {
           padding: 15px 20px;
 
           img {
-            background-size: 50px;
+            width: 50px;
+            top: 30px;
           }
 
 
@@ -914,7 +944,7 @@ section.aboutus {
       }
 
       p {
-        //width가 좁아지면 떨어짐
+        max-width: calc(100% - 375px);
         display: inline-block;
         font-size: 14px;
         padding-left: 40px;
@@ -1022,7 +1052,6 @@ footer {
 }
 
 div.logo-Top { 
-  //맨위일때는 안보임
   z-index: 9999;
   position: fixed;
   right: 0;
