cloud class 만들어서 진행하기

--- a/Jungle-Academy/portfolio1/css/index.scss
+++ b/Jungle-Academy/portfolio1/css/index.scss
@@ -51,6 +51,7 @@ section#main-door {
     }
   }
 
+  //left right 를 만들고 opactiry 0 -> 1
   &.cloud-bg {
     background-image: url(../img/main/img_smart_intro02.jpg);
   }
