--- a/Jungle-Academy/portfolio2/css/header-and-footer-style.css
+++ b/Jungle-Academy/portfolio2/css/header-and-footer-style.css
@@ -33,6 +33,225 @@ body {
   font: 15px/1.6 'Noto Sans KR';
 }
 
+header.main-header.first {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 120px;
+  background: rgba(0, 0, 0, 0.6);
+  -webkit-transition: all .4s;
+  transition: all .4s;
+  z-index: 999;
+  border: none;
+}
+
+header.main-header.first div.container {
+  position: relative;
+  max-width: calc(100% - 40px);
+  width: 1200px;
+  height: 100%;
+  color: #fff;
+  margin: 0 auto;
+}
+
+@media all and (max-width: 768px) {
+  header.main-header.first {
+    height: 50px;
+  }
+}
+
+header.main-header.first[open] {
+  background-color: #F5F6F8;
+  height: 480px;
+}
+
+header.main-header.first[open] h1.logo {
+  padding-left: 30px;
+}
+
+header.main-header.first[open] h1.logo a {
+  -webkit-transform: scale(1.5) translateY(-50%);
+          transform: scale(1.5) translateY(-50%);
+  color: #949592;
+}
+
+header.main-header.first[open] h1.logo a span {
+  color: #949592;
+}
+
+@media all and (max-width: 768px) {
+  header.main-header.first[open] h1.logo {
+    height: 50px;
+    position: relative;
+  }
+  header.main-header.first[open] h1.logo a {
+    padding-top: 30px;
+    font-size: 14px;
+  }
+  header.main-header.first[open] h1.logo a span {
+    font-size: 13px;
+    padding-left: 10px;
+  }
+}
+
+@media all and (max-width: 768px) {
+  header.main-header.first[open] {
+    position: fixed;
+    right: 0;
+    left: auto;
+    width: 85%;
+    height: 100%;
+  }
+  header.main-header.first[open] div.container {
+    height: 100%;
+  }
+}
+
+header.main-header.first[open] .menu-opener {
+  top: 65px;
+}
+
+header.main-header.first[open] .menu-opener .menu-stick {
+  background-color: #646464;
+}
+
+header.main-header.first[open] .menu-opener .menu-stick:nth-child(1) {
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+  -webkit-transform-origin: 2px;
+          transform-origin: 2px;
+}
+
+header.main-header.first[open] .menu-opener .menu-stick:nth-child(2) {
+  opacity: 0;
+}
+
+header.main-header.first[open] .menu-opener .menu-stick:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+  -webkit-transform-origin: 2px;
+          transform-origin: 2px;
+}
+
+@media all and (max-width: 768px) {
+  header.main-header.first[open] .menu-opener {
+    top: 16.5px;
+  }
+}
+
+header.main-header.first[open] nav.tnb a {
+  color: #949592;
+}
+
+@media all and (max-width: 768px) {
+  header.main-header.first[open] nav.tnb {
+    display: block;
+    top: auto;
+    right: -20px;
+    bottom: 0px;
+    width: 100%;
+    min-width: calc(100% + 40px);
+  }
+  header.main-header.first[open] nav.tnb a {
+    width: 50%;
+    height: 50px;
+    line-height: 50px;
+    border-top: 1px solid #DCDCDC;
+  }
+  header.main-header.first[open] nav.tnb a:first-child {
+    display: none;
+  }
+  header.main-header.first[open] nav.tnb a:nth-child(2), header.main-header.first[open] nav.tnb a:nth-child(3) {
+    display: block;
+    float: left;
+    padding: 0px;
+    margin: 0px;
+    text-align: center;
+  }
+  header.main-header.first[open] nav.tnb a:nth-child(2) {
+    border-right: 1px solid #DCDCDC;
+  }
+}
+
+header.main-header.first[open] nav.gnb ul.gnb-menu li.menu-item a {
+  color: #110c0c;
+  font-weight: bold;
+}
+
+header.main-header.first[open] nav.gnb ul.gnb-menu li.menu-item ul.sub-menu {
+  background-color: transparent;
+  padding: 15px 30px;
+  height: auto;
+  margin-left: 30px;
+  white-space: nowrap;
+}
+
+header.main-header.first[open] nav.gnb ul.gnb-menu li.menu-item ul.sub-menu li {
+  display: block;
+  height: 45px;
+  -webkit-transition: height .4s;
+  transition: height .4s;
+}
+
+header.main-header.first[open] nav.gnb ul.gnb-menu li.menu-item ul.sub-menu li a {
+  color: #646464;
+}
+
+@media all and (max-width: 768px) {
+  header.main-header.first[open] nav.gnb {
+    width: 200px;
+    left: 0;
+    height: auto;
+    margin-left: 20px;
+    opacity: 1;
+  }
+  header.main-header.first[open] nav.gnb > ul.gnb-menu {
+    margin-top: 20px;
+    height: 100%;
+    display: block;
+  }
+  header.main-header.first[open] nav.gnb > ul.gnb-menu > li.menu-item {
+    width: 100%;
+    text-align: left;
+    float: none;
+    -webkit-transition: all .2s;
+    transition: all .2s;
+  }
+  header.main-header.first[open] nav.gnb > ul.gnb-menu > li.menu-item.sub-menu-open > ul.sub-menu {
+    opacity: 1;
+    height: auto;
+    padding: 0;
+  }
+  header.main-header.first[open] nav.gnb > ul.gnb-menu > li.menu-item.sub-menu-open > ul.sub-menu > li {
+    height: 45px;
+  }
+  header.main-header.first[open] nav.gnb > ul.gnb-menu > li.menu-item.sub-menu-open > ul.sub-menu > li a {
+    opacity: 1;
+  }
+  header.main-header.first[open] nav.gnb > ul.gnb-menu > li.menu-item > a {
+    font-weight: normal;
+    font-size: 20px;
+    letter-spacing: 3px;
+    padding: 15px 15px 10px 15px;
+  }
+  header.main-header.first[open] nav.gnb > ul.gnb-menu > li.menu-item > ul.sub-menu {
+    height: 0px;
+    opacity: 0;
+    padding: 0px;
+  }
+  header.main-header.first[open] nav.gnb > ul.gnb-menu > li.menu-item > ul.sub-menu > li {
+    height: 40px;
+  }
+  header.main-header.first[open] nav.gnb > ul.gnb-menu > li.menu-item > ul.sub-menu > li > a {
+    font-size: 16px;
+    font-weight: normal;
+    line-height: 40px;
+    letter-spacing: 1.5px;
+    opacity: 0;
+  }
+}
+
 header.main-header {
   position: fixed;
   top: 0;
@@ -486,4 +705,4 @@ div.logo-Top {
   font-size: 10px;
   text-align: center;
 }
-/*# sourceMappingURL=header-and-footer-subpagestyle.css.map */
+/*# sourceMappingURL=header-and-footer-style.css.map */
