--- a/Jungle-Academy/portfolio2/css/header-and-footer-style.scss
+++ b/Jungle-Academy/portfolio2/css/header-and-footer-style.scss
@@ -19,6 +19,249 @@ a img {border: 0;}
 img {vertical-align: middle;} //인라인요소에 middle 기본 리셋
 body {font: 15px/1.6 'Noto Sans KR';}
 
+//main page header
+header.main-header.first {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 120px;
+  background: rgba(0,0,0,0.6);
+  transition: all .4s;
+  z-index: 999;
+  border: none;
+  
+  div.container {
+    position: relative;
+    max-width: calc(100% - 40px);
+    width: 1200px;
+    height: 100%;
+    color: #fff;
+    margin: 0 auto;
+  }
+  
+  //header.main-header
+  @include media-mobile(){
+    height: 50px;
+  }
+}
+
+//main page header open
+header.main-header.first {
+  
+  &[open] {
+    background-color: #F5F6F8;
+    height: 480px;
+
+    h1.logo {
+      //패딩효과가 부자연스러움
+      padding-left: 30px;
+
+      a {
+        transform: scale(1.5) translateY(-50%);
+        color: #949592;
+
+        span {
+          //색이 늦게 바뀜
+          color: #949592;
+        }
+      }
+
+      //h1
+      @include media-mobile(){
+        height: 50px;
+        position: relative;
+
+
+        a{
+          padding-top: 30px;
+          font-size: 14px;
+  
+          span {
+            font-size: 13px;
+            padding-left: 10px;
+          }
+        }
+      }
+    }
+
+    //header.main-header
+    @include media-mobile(){
+      position: fixed;
+      right: 0;
+      left: auto;
+      width: 85%;
+      height: 100%;
+  
+      div.container {
+        height: 100%;
+      }
+    }
+
+    .menu-opener {
+      top: 65px;
+
+      .menu-stick {
+        background-color: #646464;
+      }
+      
+      .menu-stick:nth-child(1) {
+        transform: rotate(45deg);
+        transform-origin: 2px;
+      }
+
+      .menu-stick:nth-child(2) {
+        opacity: 0; 
+      }
+
+      .menu-stick:nth-child(3) {
+        transform: rotate(-45deg);
+        transform-origin: 2px;
+      }
+
+      @include media-mobile(){
+        top: 16.5px;
+      }
+    }
+
+    nav.tnb {
+      a {
+        color: #949592;
+      }
+
+      @include media-mobile(){
+        display: block;
+        top: auto;
+        right: -20px;
+        bottom: 0px;
+        width: 100%;
+        min-width: calc(100% + 40px);
+
+        a{
+          width: 50%;
+          height: 50px;
+          line-height: 50px;
+          border-top: 1px solid #DCDCDC;
+
+          &:first-child {
+            display: none;
+          }
+
+          &:nth-child(2), &:nth-child(3) {
+            display: block;
+            float: left;
+            padding: 0px;
+            margin: 0px;
+            text-align: center;
+          }
+
+          &:nth-child(2) {
+            border-right: 1px solid #DCDCDC;
+          }
+        }
+      }
+    }
+
+    nav.gnb {
+
+      ul.gnb-menu {
+        li.menu-item {
+          
+          a{
+            color: #110c0c;
+            font-weight: bold;
+          }
+
+          ul.sub-menu {
+            background-color: transparent;
+            padding: 15px 30px;
+            height: auto;
+            margin-left: 30px;
+            white-space: nowrap;
+            
+            li {
+              display: block;
+              height: 45px;
+              transition: height .4s;
+
+              a{
+                color: #646464;
+              }
+            }
+          }
+        }
+      }
+
+      //nav.gnb
+      @include media-mobile(){
+        width: 200px;
+        left: 0;
+        height: auto;
+        margin-left: 20px;
+        opacity: 1;
+    
+        >ul.gnb-menu{
+          margin-top: 20px;
+          height: 100%;
+          display: block;
+    
+          >li.menu-item{
+            width: 100%;
+            text-align: left;
+            float: none;
+            transition: all .2s;
+    
+            &.sub-menu-open {
+              > ul.sub-menu {
+                opacity: 1;
+                height: auto;
+                padding: 0;
+                
+                >li {
+                  height: 45px;
+
+                  a{
+                    opacity: 1;
+                  }
+                }
+              }
+            }
+    
+            >a {
+              font-weight: normal;
+              font-size: 20px;
+              letter-spacing: 3px;
+              padding: 15px 15px 10px 15px;
+            }
+            
+            >ul.sub-menu{
+              height: 0px;
+              opacity: 0;
+              padding: 0px;
+    
+              >li{
+                height: 40px;
+
+    
+                >a{
+                  font-size: 16px;
+                  font-weight: normal;
+                  line-height: 40px;
+                  letter-spacing: 1.5px;   
+                  opacity: 0;             
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+//main page header open end
+
+
+//sub page header
 header.main-header {
   position: fixed;
   top: 0;
@@ -183,9 +426,10 @@ div.container {
     }
   }
 }
-//header end
+//sub page header end
 
-//헤더가 오픈일때
+
+//sub page header open
 header.main-header {
   &[open] {
     background-color: #F5F6F8;
@@ -401,7 +645,7 @@ header.main-header {
     }
   }
 }
-
+//sub page header open end
 
 
 //footer
@@ -496,6 +740,8 @@ footer {
     }
   }
 }
+//footer end
+
 
 div.logo-Top { 
   //맨위일때는 안보임
