--- a/Jungle-Academy/portfolio2/css/ware-valley.scss
+++ b/Jungle-Academy/portfolio2/css/ware-valley.scss
@@ -119,7 +119,7 @@ div.top-hero {
     }
 
     .hero-btn {
-      top : 82%;
+      top : 75%;
       right: auto;
       left: 50%;
       transform: translate(-50%, -50%);
@@ -156,6 +156,8 @@ div.top-hero {
 
 .top-hero.hero3{
   background-image: url(../img/download/common/slide_visual03.jpg);
+  background-position: top center;
+  background-size: 130% 100%;
 
   h1, .hero-btn {
     left: auto;
@@ -165,6 +167,7 @@ div.top-hero {
   h1 {
     top: 30%;
     right: 150px;
+    height: 180px;
 
     img {
       width: 450px;
@@ -172,17 +175,23 @@ div.top-hero {
   }
 
   .hero-btn {
-    top: 70%;
+    top: 60%;
     right: 345px;
   }
 
  //hero3
   @include media-mobile(){
     h1{
+      color: #fff;
       right: auto;
-      top: 45%;
+      top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
+
+      img{
+        width: 200px;
+        margin-bottom: 10px;
+      }
 
       span {
         font-size: 18px;
@@ -191,7 +200,7 @@ div.top-hero {
       }
     }
     .hero-btn {
-      top: 82%;
+      top: 75%;
       right: auto;
       left: 50%;
       transform: translate(-50%, -50%);
