index skip 버튼만 확인

--- a/Jungle-Academy/portfolio1/css/main.css
+++ b/Jungle-Academy/portfolio1/css/main.css
@@ -237,4 +237,8 @@ nav.gnb > div.menu.students {
 nav.gnb > div.menu.students.menu-active {
   left: 0;
 }
+
+.hide {
+  opacity: 0;
+}
 /*# sourceMappingURL=main.css.map */
