--- a/Jungle-Academy/portfolio1/css/index.css
+++ b/Jungle-Academy/portfolio1/css/index.css
@@ -15,7 +15,12 @@ section#main-door {
   height: 100%;
 }
 
-section#main-door .left-door {
+section#main-door .door-bg {
+  -webkit-transition: opacity .4s;
+  transition: opacity .4s;
+}
+
+section#main-door .door-bg .left-door {
   position: absolute;
   width: 50%;
   height: 100%;
@@ -26,11 +31,11 @@ section#main-door .left-door {
   background-color: #CEE9F6;
   background-image: url(../img/main/img_smart_intro01.jpg);
   background-repeat: no-repeat;
-  -webkit-transition: left .5s;
-  transition: left .5s;
+  -webkit-transition: left .5s, opacity .4s;
+  transition: left .5s, opacity .4s;
 }
 
-section#main-door .right-door {
+section#main-door .door-bg .right-door {
   position: absolute;
   width: 50%;
   height: 100%;
@@ -41,20 +46,58 @@ section#main-door .right-door {
   background-color: #CEE9F6;
   background-image: url(../img/main/img_smart_intro01.jpg);
   background-repeat: no-repeat;
-  -webkit-transition: left .5s;
-  transition: left .5s;
+  -webkit-transition: left .5s, opacity .4s;
+  transition: left .5s, opacity .4s;
 }
 
-section#main-door.door-active .left-door {
+section#main-door .door-bg.hide {
+  opacity: 0;
+}
+
+section#main-door .door-bg.door-active .left-door {
   left: 0%;
 }
 
-section#main-door.door-active .right-door {
+section#main-door .door-bg.door-active .right-door {
   left: 50%;
 }
 
-section#main-door.cloud-bg {
-  background-image: url(../img/main/img_smart_intro02.jpg);
+section#main-door .cloud-bg {
+  opacity: 0;
+  -webkit-transition: opacity .4s;
+  transition: opacity .4s;
+}
+
+section#main-door .cloud-bg .left-cloud {
+  position: absolute;
+  width: 50%;
+  left: 0%;
+  height: 100%;
+  background: url(../img/main/img_smart_intro02.jpg) no-repeat;
+  -webkit-transition: left .4s;
+  transition: left .4s;
+}
+
+section#main-door .cloud-bg .right-cloud {
+  position: absolute;
+  width: 50%;
+  left: 50%;
+  height: 100%;
+  background: url(../img/main/img_smart_intro02.jpg) no-repeat;
+  -webkit-transition: left .4s;
+  transition: left .4s;
+}
+
+section#main-door .cloud-bg.show {
+  opacity: 1;
+}
+
+section#main-door .cloud-bg.cloud-active .left-cloud {
+  left: -100%;
+}
+
+section#main-door .cloud-bg.cloud-active .right-cloud {
+  left: 100%;
 }
 
 @-webkit-keyframes mask {
@@ -84,6 +127,8 @@ section#main-door .logo {
   display: block;
   width: 180px;
   height: 80px;
+  -webkit-transition: opacity 1s;
+  transition: opacity 1s;
 }
 
 section#main-door .logo:after {
@@ -98,6 +143,10 @@ section#main-door .logo:after {
           animation-fill-mode: forwards;
 }
 
+section#main-door .logo.hide {
+  opacity: 0;
+}
+
 section#main-door .text-banner {
   position: absolute;
   top: 40%;
@@ -106,8 +155,8 @@ section#main-door .text-banner {
           transform: translateX(-50%);
   width: 792px;
   height: 162px;
-  -webkit-transition: top 1s;
-  transition: top 1s;
+  -webkit-transition: top 1s, opacity .4s;
+  transition: top 1s, opacity .4s;
 }
 
 section#main-door .text-banner .banner-text-l {
@@ -185,11 +234,11 @@ section#main-door img#uniform-2 {
   position: absolute;
   left: 100%;
   width: 100%;
-  -webkit-transition: left .5s;
-  transition: left .5s;
+  -webkit-transition: left .5s, opacity .4s;
+  transition: left .5s, opacity .4s;
 }
 
-section#main-door img#uniform-2.uniform-active-2 {
+section#main-door img#uniform-2.uniform-active {
   left: 0;
 }
 
@@ -199,10 +248,37 @@ section#main-door img#uniform-2.uniform-active-2 {
   left: 50%;
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
+  -webkit-transition: opacity .4s, top .6s;
+  transition: opacity .4s, top .6s;
   width: 792px;
   height: 180px;
   opacity: 0;
   background: url(../img/main/img_intro02_txt.png);
   background-origin: cover;
+}
+
+.text-banner-pink.active {
+  top: -50%;
+}
+
+.skip {
+  opacity: 0;
+  position: fixed;
+  display: block;
+  top: 20px;
+  right: 10px;
+  width: 140px;
+  height: 56px;
+  background: url(../img/main/btn_skip.png) no-repeat;
+  -webkit-transition: opacity 1s;
+  transition: opacity 1s;
+}
+
+.hide {
+  opacity: 0;
+}
+
+.show {
+  opacity: 1;
 }
 /*# sourceMappingURL=index.css.map */
