--- a/Jungle-Academy/portfolio1/css/index.scss
+++ b/Jungle-Academy/portfolio1/css/index.scss
@@ -14,46 +14,86 @@ section#main-door {
   width: 100%;
   height: 100%;
 
-  .left-door{
-    position: absolute;
-    width: 50%;
-    height: 100%;
-    top:0;
-    left:-25%;
-    right: auto;
-    bottom: 0;
-    background-color: #CEE9F6;
-    background-image: url(../img/main/img_smart_intro01.jpg);
-    background-repeat: no-repeat;
-    transition: left .5s;
-  }
+  .door-bg {
+    transition: opacity .4s;
 
-  .right-door{
-    position: absolute;
-    width: 50%;
-    height: 100%;
-    top:0;
-    left:75%;
-    right: auto;
-    bottom: 0;
-    background-color: #CEE9F6;
-    background-image: url(../img/main/img_smart_intro01.jpg);
-    background-repeat: no-repeat;
-    transition: left .5s;
-  }
-
-  &.door-active {
-    .left-door {
-      left:0%;
+    .left-door{
+      position: absolute;
+      width: 50%;
+      height: 100%;
+      top:0;
+      left:-25%;
+      right: auto;
+      bottom: 0;
+      background-color: #CEE9F6;
+      background-image: url(../img/main/img_smart_intro01.jpg);
+      background-repeat: no-repeat;
+      transition: left .5s, opacity .4s;
     }
-    .right-door {
-      left:50%;
+
+    .right-door{
+      position: absolute;
+      width: 50%;
+      height: 100%;
+      top:0;
+      left:75%;
+      right: auto;
+      bottom: 0;
+      background-color: #CEE9F6;
+      background-image: url(../img/main/img_smart_intro01.jpg);
+      background-repeat: no-repeat;
+      transition: left .5s, opacity .4s;
+    }
+
+    &.hide {
+      opacity: 0;
+    }
+
+    &.door-active {
+      .left-door {
+        left:0%;
+      }
+      .right-door {
+        left:50%;
+      }
     }
   }
 
   //left right 를 만들고 opactiry 0 -> 1
-  &.cloud-bg {
-    background-image: url(../img/main/img_smart_intro02.jpg);
+  .cloud-bg {
+    opacity: 0;
+    transition: opacity .4s;
+
+    .left-cloud {
+      position: absolute;
+      width: 50%;
+      left: 0%;
+      height: 100%;
+      background: url(../img/main/img_smart_intro02.jpg) no-repeat;
+      transition: left .4s;
+    }
+
+    .right-cloud {
+      position: absolute;
+      width: 50%;
+      left: 50%;
+      height: 100%;
+      background: url(../img/main/img_smart_intro02.jpg) no-repeat;
+      transition: left .4s;
+    }
+
+    &.show {
+      opacity: 1;
+    }
+
+    &.cloud-active {
+      .left-cloud {
+        left:-100%;
+      }
+      .right-cloud {
+        left:100%;
+      }
+    }
   }
 }
 
@@ -72,6 +112,7 @@ section#main-door {
     display: block;
     width: 180px;
     height: 80px;
+    transition: opacity 1s;
 
     &:after {
       content: url(../img/hero/img_logo.png);
@@ -80,6 +121,10 @@ section#main-door {
       animation-name: mask;
       animation-duration: 2s;
       animation-fill-mode: forwards;
+    }
+
+    &.hide {
+      opacity: 0;
     }
   }
 
@@ -90,8 +135,7 @@ section#main-door {
     transform: translateX(-50%);
     width: 792px;
     height: 162px;
-    transition: top 1s;
-
+    transition: top 1s, opacity .4s;
     
     .banner-text-l {
       position: absolute;
@@ -168,9 +212,9 @@ section#main-door {
     position: absolute;
     left: 100%;
     width: 100%;
-    transition: left .5s;
+    transition: left .5s, opacity .4s;
 
-    &.uniform-active-2 {
+    &.uniform-active {
       left:0;
     }
   }
@@ -182,9 +226,35 @@ section#main-door {
   top: 130px;
   left: 50%;
   transform: translateX(-50%);
+  transition: opacity .4s, top .6s ;
   width: 792px;
   height: 180px;
   opacity: 0;
   background: url(../img/main/img_intro02_txt.png);
   background-origin: cover;
+
+  &.active {
+    top: -50%;
+  }
+}
+
+.skip {
+  opacity: 0;
+  position: fixed;
+  display: block;
+  top: 20px;
+  right: 10px;
+  width: 140px;
+  height: 56px;
+  background: url(../img/main/btn_skip.png) no-repeat;
+  transition: opacity 1s; 
+}
+
+// 공통 css
+.hide {
+  opacity: 0;
+}
+
+.show {
+  opacity: 1;
 }
